# NBT

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/nbt/: nbt.hpp  nbt_reader.hpp  nbt_type.hpp  nbt_writer.hpp
src/: byteswap.hpp  modified_utf.hpp  nbt_reader.cpp  nbt_type.cpp  nbt_writer.cpp  primitive.hpp
tests/: CMakeLists.txt  reader.cpp  test.hpp  writer.cpp
tests/conf/: nbt.tweaks.hpp
